Fix push notifications, added Food ordering?